Second commit which only accepts pictures of faces

--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@google-cloud/vision": "^2.3.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^8.6.8",
+    "firebase-admin": "^9.9.0",
+    "firebase-tools": "^9.13.1",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
